Refs #1240 -- Fixed search bar text visibility in light mode (#1247)
* Fixed search bar text visibility in Light mode.

This fix is for Issue #1240 I opened. I changed the search bar's (and other input fields') text color to the correct color.

* Placeholder color on textual inputs.

Added declarations for placeholder color on text-based inputs.

* Apply suggestions from code review


* fix placeholders style and remove code related

--- a/djangoproject/scss/_dark-mode.scss
+++ b/djangoproject/scss/_dark-mode.scss
@@ -128,26 +128,6 @@ html[data-theme="light"],
 		}
 	}
 
-	body ::-webkit-input-placeholder {
-		/* Chrome/Opera/Safari */
-		color: $gray-medium-l10;
-	}
-
-	body ::-moz-placeholder {
-		/* Firefox 19+ */
-		color: $gray-medium-l10;
-	}
-
-	body :-ms-input-placeholder {
-		/* IE 10+ */
-		color: $gray-medium-l10;
-	}
-
-	body :-moz-placeholder {
-		/* Firefox 18- */
-		color: $gray-medium-l10;
-	}
-
 	body [role="contentinfo"] {
 		background: darken($green, 10%);
 	}
@@ -228,25 +208,6 @@ html[data-theme="dark"] {
 		}
 	}
 
-	::-webkit-input-placeholder {
-		/* Chrome/Opera/Safari */
-		color: $gray-medium-l10;
-	}
-
-	::-moz-placeholder {
-		/* Firefox 19+ */
-		color: $gray-medium-l10;
-	}
-
-	:-ms-input-placeholder {
-		/* IE 10+ */
-		color: $gray-medium-l10;
-	}
-
-	:-moz-placeholder {
-		/* Firefox 18- */
-		color: $gray-medium-l10;
-	}
 
 	[role="contentinfo"] {
 		background: darken($green, 10%);
