--- a/djangoproject/scss/_style.scss
+++ b/djangoproject/scss/_style.scss
@@ -2631,7 +2631,7 @@ form {
         -moz-appearance: none;
         background: var(--white-color);
         border: 1px solid var(--hairline-color);
-        color: var(--hairline-color);
+        color: var(--body-fg);
         border-radius: 4px;
         cursor: auto;
         display: block;
@@ -2657,6 +2657,22 @@ form {
             outline: none;
             border-color: var(--secondary);
         }
+
+        &::-webkit-input-placeholder {
+			color: var(--body-fg);
+		}
+		&:-ms-input-placeholder {
+			color: var(--body-fg);
+		}
+		&::-moz-placeholder {
+			color: var(--body-fg);
+		}
+		&:-moz-placeholder {
+			color: var(--body-fg);
+		}
+		&::placeholder {
+			color: var(--body-fg);
+		}
     }
 
     textarea {
@@ -2817,12 +2833,6 @@ div[role=main] {
     }
 }
 
-::-webkit-input-placeholder,
-:-moz-placeholder,
-::-moz-placeholder,
-:-ms-input-placeholder {
-    color: var(--dark-hairline-color);
-}
 
 .form-email {
     // Email submission forms on Community page.
